# asdsk-2011

pracownie/prac1/: Main.hs  Parser.hs  asdsk-prac1.cabal  pwz
pracownie/prac1/ansic/: LICENSE  makefile  pwz.c  pwz.h  pwz_testser.c  pwzd.c
pracownie/prac1/haskell/: DataTypes.hs  Main.hs
pracownie/prac2/: a.out  helpers.h  makefile  showroute.cpp  test  test.c  test2  test2.c  test3.cpp  test3.cpp.orig  types.h
tmp/: dist.7z
